chore: fix timeout issue& revise docs